--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#################
+## Matlab
+#################
+
+*.asv
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -26,8 +32,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
-
+Icon
 # Thumbnails
 ._*
 
